# ipynb2md

./: README.md  pyproject.toml  run.py  run_tests.py
src/ipynb2md/: main.py  notebook_cell.py  notebook_converter.py  utils.py
src/tests/: test_notebook_cell.py  test_notebook_converter.py
